<resources>
    <string name="app_name">EmDiabetes</string>

    <!--    Generics-->
    <string name="text_email">E-mail</string>
    <string name="text_email_hint">email@email.com</string>
    <string name="text_password">Senha</string>
    <string name="text_password_hint">******</string>
    <string name="text_register_account">Criar conta</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_button_confirm">Confirmar</string>
    <string name="text_task_delete_sucess">Removido com sucesso.</string>
    <string name="text_task_update_sucess">Atualizado com sucesso.</string>

    <!--    Login Fragment-->
    <string name="text_btn_login_fragment">Entrar</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="text_password_empty_login_fragment">Informe sua senha.</string>
    <string name="text_email_empty_login_fragment">Informe seu e-mail.</string>

    <!--    Register Fragment-->
    <string name="text_password_empty_register_fragment">Informe sua senha.</string>
    <string name="text_email_empty_register_fragment">Informe seu e-mail.</string>

    <!--    Recover Account Fragment-->
    <string name="text_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_btn_recover_account_fragment">Enviar</string>
    <string name="text_email_empty_recover_account_fragment">Informe seu e-mail.</string>
    <string name="text_email_send_sucess_recover_account_fragment">Pronto, acabamos de enviar um link para seu e-mail.</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    Forms Fragment-->
    <string name="text_title_form_fragment">Nova</string>
    <string name="text_description_form_fragment">Descrição</string>
    <string name="text_description_hint_form_fragment">digite aqui...</string>
    <string name="text_editing_form_fragment">Editando…</string>
    <string name="text_status_form_fragment">Status</string>
    <string name="text_btn_save_form_fragment">Salvar</string>
    <string name="text_description_empty_form_fragment">Informe a informação solicitada.</string>
    <string name="text_save_sucess_form_fragment">Salvo com sucesso.</string>
    <string name="text_update_sucess_form_fragment">Atualizado com sucesso.</string>
    <string name="text_erro_save_form_fragment">Erro ao salvar.</string>

    <!--    Options-->
    <string name="option_medication">Remédios</string>
    <string name="option_glycemia">Glicemia</string>
    <string name="option_contact">Contatos</string>

    <!--    Medication Fragment-->
    <string name="text_medication_list_empty_fragment">Nenhuma medicação cadastrada.</string>
    <string name="text_message_delete_medication_fragment">Deseja realmente remover este medicamento?</string>

    <!--    Glycemia Fragment-->
    <string name="text_glycemia_list_empty_fragment">Nenhuma glicemia cadastrada.</string>
    <string name="text_message_delete_glycemia_fragment">Deseja realmente remover esta glicemia?</string>

    <!--    Contact Fragment-->
    <string name="text_contact_list_empty_fragment">Nenhum contato cadastrada.</string>
    <string name="text_message_delete_contact_fragment">Deseja realmente remover este contato?</string>

    <!--    Home Fragment-->
    <string name="txt_message_logout">Deseja realmente sair?</string>

    <!--    Calc Insulina Fragment-->
    <string name="hint_peso">Seu Peso(Kg)</string>
    <string name="hint_carboidratos">Carboidrato(g)</string>
    <string name="text_buttom_calcular">Calcular Dosagem de Insulina</string>
    <string name="text_buttom_lembrete">Lembrete</string>
    <string name="text_buttom_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_carboidrato">Informe a quantidade de carboidrato!</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de tomar insulina!</string>

    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>