<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_logoemdiabetes"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintStart_toStartOf="@+id/container_header"
        />
    
    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:textColorHint="@android:color/holo_red_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edit_carboidrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_carboidratos"
        android:textColorHint="@android:color/holo_red_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@+id/edit_peso"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_buttom_calcular"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_buttom"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <View
        android:id="@+id/container_resultado_ui"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_resultado_ui"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_resultado_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/container_resultado_ui"
        app:layout_constraintStart_toStartOf="@id/container_resultado_ui"
        app:layout_constraintEnd_toEndOf="@id/container_resultado_ui"
        app:layout_constraintBottom_toBottomOf="@id/container_resultado_ui"
        />

    <Button
        android:id="@+id/bt_definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_buttom_lembrete"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado_ui"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_buttom_alarme"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado_ui"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hora"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dois_pontos"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_minutos"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>